; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_time_pos.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_time_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_4__ = type { i32 }

@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@M_PROPERTY_SET = common dso_local global i32 0, align 4
@MPSEEK_ABSOLUTE = common dso_local global i32 0, align 4
@MPSEEK_DEFAULT = common dso_local global i32 0, align 4
@M_PROPERTY_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_time_pos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_time_pos(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** %10, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %4
  %18 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %18, i32* %5, align 4
  br label %38

19:                                               ; preds = %4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @M_PROPERTY_SET, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %19
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %25 = load i32, i32* @MPSEEK_ABSOLUTE, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = bitcast i8* %26 to double*
  %28 = load double, double* %27, align 8
  %29 = load i32, i32* @MPSEEK_DEFAULT, align 4
  %30 = call i32 @queue_seek(%struct.TYPE_4__* %24, i32 %25, double %28, i32 %29, i32 0)
  %31 = load i32, i32* @M_PROPERTY_OK, align 4
  store i32 %31, i32* %5, align 4
  br label %38

32:                                               ; preds = %19
  %33 = load i32, i32* %8, align 4
  %34 = load i8*, i8** %9, align 8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %36 = call i32 @get_current_time(%struct.TYPE_4__* %35)
  %37 = call i32 @property_time(i32 %33, i8* %34, i32 %36)
  store i32 %37, i32* %5, align 4
  br label %38

38:                                               ; preds = %32, %23, %17
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @queue_seek(%struct.TYPE_4__*, i32, double, i32, i32) #1

declare dso_local i32 @property_time(i32, i8*, i32) #1

declare dso_local i32 @get_current_time(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
